# zadaniya

./: .gitignore  1111  123.csv  CMakeLists.txt  basadannih  main.cpp  qwe.cpp  qwe.h
build123/: CMakeCache.txt  cmake_install.cmake  untitled1
untitled2/: CMakeCache.txt  CMakeLists.txt
untitled2/1/2/: 123.csv  CMakeLists.txt  class.cpp  class.hpp  file2.csv  form.cpp  form.hpp  form.ui  main.cpp
untitled2/_build/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake  cmake_uninstall.cmake  compile_commands.json  etc  log  rules.ninja  share  uncrustify-classheader.txt  uncrustify-filefooter.txt  uncrustify-fileheader.txt  uncrustify-funcheader.txt  untitled2_l10n.qrc  var
untitled2/_build/1/2/: cmake_install.cmake  moc_class.cpp_parameters  moc_form.cpp_parameters
untitled2/_build/include/: myx_cmake_private_config_p.hpp
